[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
hex = "0.4"
num = "0.4"
sled = "0.34.7"
bincode = "1.3.3"
serde = {version ="1.0", features =["derive"]}
structopt = "0.3.13"
